// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Example Negative GET request should fail on missing input param 1`] = `
Object {
  "error": Object {
    "message": "id: Required",
  },
  "status": "error",
}
`;

exports[`Example Negative POST request should fail on schema validation 1`] = `
Object {
  "error": Object {
    "message": "id: Value should be greater than or equal to 0",
  },
  "status": "error",
}
`;

exports[`Example Positive Should send an image with a correct header 1`] = `"f39beeff92379dc935586d726211c2620be6f879"`;

exports[`Example Positive Should stream an image with a correct header 1`] = `"f39beeff92379dc935586d726211c2620be6f879"`;
